--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,13 @@
-.App {
+.app {
   display: grid;
   justify-items: center;
+  grid-template-rows: 4rem 1fr 3rem;
+  height: 100vh;
+  background-color: var(--background-color-page);
+}
+
+.app__page {
+  padding: 0.5rem;
+  padding-top: 2rem;
+  overflow-y: scroll;
 }
