--- a/src/base.css
+++ b/src/base.css
@@ -2,6 +2,24 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  margin: 0;
+}
+
 p {
   margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 1.6rem;
+  letter-spacing: 1px;
 }
